# MachineLearnia-Module-1-Les-6-pilliers-de-l-IA

./: bibliotheque.db
1.1 Intorduction à la Data Science/B.A-BA/: exo_1_health_expectancy.html  exo_2_miles_per_gallon.html  exo_2_miles_per_gallon.ipynb  exo_3_anscombe.html  exo_3_anscombe.ipynb
1.1 Intorduction à la Data Science/Formuler et tester hypothèses/: exo_2_miles_per_gallon.ipynb
1_Méthodologie/B.A-BA/: exo_1_health_expectancy.ipynb
1_Méthodologie/Formuler et tester hypothèses/: exo_1_health_expectation.ipynb  exo_2_miles_per_gallon.ipynb
1_Méthodologie/Preprocessing/: encoding.ipynb
2_Prise_en_mains_machine/projet_1/: script.py
2_Prise_en_mains_machine/projet_2/: pyproject.toml
3_SQL/Flashcards/: flashcards.db  flashcards.py
3_SQL/SQLite/: bibliotheque.db  database.py  pyproject.toml  requêtes.py
3_SQL/projet_1/: pyproject.toml
4_ClassificationBankChurn/: decision_tree_model.pkl  lgbm_model.pkl  lgbm_optimized.pkl  processing.ipynb  pyproject.toml  scaler.pkl  submission.csv  test.ipynb  xgb_model.pkl
4_ClassificationBankChurn/analysis/: exploration.ipynb  hypthesisTesting.ipynb
