[project]
name = "4-classificationbankchurn"
version = "0.1.0"
description = "first ML Project in MachineLearnia Pro course. It's a Classification problem."
authors = [
    {name = "WolfgangReip"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
