[project]
name = "projet-2"
version = "0.1.0"
description = ""
authors = [
    {name = "WolfgangReip"}
]
readme = "README.md"
requires-python = "^3.11.1"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
