[project]
name = "sqlite"
version = "0.1.0"
description = ""
authors = [
    {name = "Wolf"}
]
readme = "README.md"
requires-python = "^3.11.1"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
