[project]
name = "projet-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Wolfgang"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
